# ai_academy

./: README.md
Notebooks/: Explanatory Data Analysis.ipynb  Model on radar parameters.ipynb  Model on radar spectra and radar params.ipynb  Model on radar spectra.ipynb
computer_vision/: pyproject.toml  tasks.txt
computer_vision/notebooks/: analyze-mistakes.ipynb  cv_plant_pathology.ipynb  determine_normalization.ipynb  initial-analysis.ipynb
computer_vision/plant_pathology/: train_model.py
day_1/: README.md  changing_jobs.ipynb
pandas_scikit_learn/: main_concepts.ipynb
